# Engine

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  copy.bat  gen_lib.bat  main.js  package-lock.json  package.json  schema.puml  setBins.bat  setBins.sh
bridge/: Cameras.ts  Engine.ts  Extensions.js  Extensions.ts  FullBowody.js  FullBowody.ts
include/: Engine.hpp  EngineLoader.hpp
include/Camera/: Camera.hpp  CameraFrameEvent.hpp  CameraFrameEventData.hpp  Frame.hpp
include/Event/: Event.hpp  EventListener.hpp  EventManager.hpp
include/private/: Debug.hpp  path.hpp
include/private/Camera/: CaptureStream.hpp  CaptureWebcam.hpp
include/public/: DLLLoader.hpp  Engine.hpp  EngineLoader.hpp  Identifiable.hpp  Updatable.hpp  utils.hpp
include/public/Camera/: Camera.hpp  CameraFrameEvent.hpp  CameraFrameEventData.hpp  Capture.hpp  Frame.hpp
include/public/Event/: Event.hpp  EventData.hpp  EventListener.hpp  EventManager.hpp
include/public/Param/: Param.hpp  ParamBool.hpp  ParamEnum.hpp  ParamFloat.hpp  ParamInt.hpp  ParamManager.hpp  ParamString.hpp
include/public/Plugins/: CameraPlugin.hpp  PluginDescriptor.hpp  PluginHandle.hpp  PluginLoader.hpp  PluginProvider.hpp
include/public/Processing/: FilterValues.hpp  ScenePoseResolver.hpp
include/public/Struct/: Body.hpp  Callback.hpp  Marker.hpp  Nullable.hpp  Pose.hpp  Quaternion.hpp  Scene.hpp  Vec2.hpp  Vec3.hpp
include/public/Tracker/: ArucoTracker.hpp  BodyTracker.hpp
src/: Callback.hpp  Engine.cpp  Engine.hpp  EngineLoader.hpp  Identifiable.cpp  ScenePoseResolver.cpp  common.hpp  main.cpp  register.cpp
src/Camera/: Camera.cpp  CameraFrameEvent.cpp  CameraFrameEventData.cpp  Capture.cpp  CaptureStream.cpp  CaptureWebcam.cpp  Frame.cpp
src/Event/: EventData.cpp
src/Param/: Param.cpp  ParamManager.cpp
src/Plugins/: PluginDescriptor.cpp  PluginHandle.cpp  PluginProvider.cpp
src/Processing/: FilterValues.cpp  ScenePoseResolver.cpp
src/Struct/: Marker.cpp  Pose.cpp  Quaternion.cpp  Scene.cpp
src/Tracker/: ArucoTracker.cpp  BodyTracker.cpp
src/body/: Body.cpp  Body.hpp  BodyJoint.cpp  BodyJoint.hpp
src/cameras/: Camera.cpp  Camera.hpp  CameraManager.cpp  CameraManager.hpp
src/common/: Callback.hpp  Promise.cpp  Promise.hpp  common.cpp  common.hpp  settings.cpp  settings.hpp
src/exports/: Cameras.hpp  Engine.hpp  ExtensionServer.hpp  Extensions.hpp
src/extensions/: Extension.cpp  Extension.hpp  ExtensionServer.cpp  ExtensionServer.hpp  Network.hpp  Network_WIN.cpp
src/tracking/: IPC.hpp  IPC_WIN.cpp  Tracker.cpp  Tracker.hpp
